--- a/.github/workflows/sarif-scan.yml
+++ b/.github/workflows/sarif-scan.yml
@@ -5,6 +5,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+permissions:
+  security-events: write
+  contents: read
 jobs:
   sec:
     runs-on: ubuntu-latest
